docs/api/qiskit/0.43/qiskit.algorithms.optimizers.QNSPSA.mdx
---
title: QNSPSA
description: API reference for qiskit.algorithms.optimizers.QNSPSA
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.optimizers.QNSPSA
---

# QNSPSA

<Class id="qiskit.algorithms.optimizers.QNSPSA" github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/algorithms/optimizers/qnspsa.py" signature="QNSPSA(fidelity, maxiter=100, blocking=True, allowed_increase=None, learning_rate=None, perturbation=None, resamplings=1, perturbation_dims=None, regularization=None, hessian_delay=0, lse_solver=None, initial_hessian=None, callback=None, termination_checker=None)">
  Bases: [`SPSA`](qiskit.algorithms.optimizers.SPSA "qiskit.algorithms.optimizers.spsa.SPSA")

  The Quantum Natural SPSA (QN-SPSA) optimizer.

  The QN-SPSA optimizer \[1] is a stochastic optimizer that belongs to the family of gradient descent methods. This optimizer is based on SPSA but attempts to improve the convergence by sampling the **natural gradient** instead of the vanilla, first-order gradient. It achieves this by approximating Hessian of the `fidelity` of the ansatz circuit.

  Compared to natural gradients, which require $\mathcal{O}(d^2)$ expectation value evaluations for a circuit with $d$ parameters, QN-SPSA only requires $\mathcal{O}(1)$ and can therefore significantly speed up the natural gradient calculation by sacrificing some accuracy. Compared to SPSA, QN-SPSA requires 4 additional function evaluations of the fidelity.

  The stochastic approximation of the natural gradient can be systematically improved by increasing the number of `resamplings`. This leads to a Monte Carlo-style convergence to the exact, analytic value.

  <Admonition title="Note" type="note">
    This component has some function that is normally random. If you want to reproduce behavior then you should set the random number generator seed in the algorithm\_globals (`qiskit.utils.algorithm_globals.random_seed = seed`).
  </Admonition>

  **Examples**

  This short example runs QN-SPSA for the ground state calculation of the `Z ^ Z` observable where the ansatz is a `PauliTwoDesign` circuit.

  ```python
  import numpy as np
  from qiskit.algorithms.optimizers import QNSPSA
  from qiskit.circuit.library import PauliTwoDesign
  from qiskit.primitives import Estimator, Sampler
  from qiskit.quantum_info import Pauli

  # problem setup
  ansatz = PauliTwoDesign(2, reps=1, seed=2)
  observable = Pauli("ZZ")
  initial_point = np.random.random(ansatz.num_parameters)

  # loss function
  estimator = Estimator()

  def loss(x):
      result = estimator.run([ansatz], [observable], [x]).result()
      return np.real(result.values[0])

  # fidelity for estimation of the geometric tensor
  sampler = Sampler()
  fidelity = QNSPSA.get_fidelity(ansatz, sampler)

  # run QN-SPSA
  qnspsa = QNSPSA(fidelity, maxiter=300)
  result = qnspsa.optimize(ansatz.num_parameters, loss, initial_point=initial_point)
  ```

  This is a legacy version solving the same problem but using Qiskit Opflow instead of the Qiskit Primitives. Note however, that this usage is deprecated.

  ```python
  import numpy as np
  from qiskit.algorithms.optimizers import QNSPSA
  from qiskit.circuit.library import PauliTwoDesign
  from qiskit.opflow import Z, StateFn

  ansatz = PauliTwoDesign(2, reps=1, seed=2)
  observable = Z ^ Z
  initial_point = np.random.random(ansatz.num_parameters)

  def loss(x):
      bound = ansatz.bind_parameters(x)
      return np.real((StateFn(observable, is_measurement=True) @ StateFn(bound)).eval())

  fidelity = QNSPSA.get_fidelity(ansatz)
  qnspsa = QNSPSA(fidelity, maxiter=300)
  result = qnspsa.optimize(ansatz.num_parameters, loss, initial_point=initial_point)
  ```

  **References**

  \[1] J. Gacon et al, “Simultaneous Perturbation Stochastic Approximation of the Quantum Fisher Information”, [arXiv:2103.09232](https://arxiv.org/abs/2103.09232)

  **Parameters**

  *   **fidelity** (*FIDELITY*) – A function to compute the fidelity of the ansatz state with itself for two different sets of parameters.
  *   **maxiter** (*int*) – The maximum number of iterations. Note that this is not the maximal number of function evaluations.
  *   **blocking** (*bool*) – If True, only accepts updates that improve the loss (up to some allowed increase, see next argument).
  *   **allowed\_increase** (*float | None*) – If `blocking` is `True`, this argument determines by how much the loss can increase with the proposed parameters and still be accepted. If `None`, the allowed increases is calibrated automatically to be twice the approximated standard deviation of the loss function.
  *   **learning\_rate** (*float | Callable\[\[], Iterator] | None*) – The update step is the learning rate is multiplied with the gradient. If the learning rate is a float, it remains constant over the course of the optimization. It can also be a callable returning an iterator which yields the learning rates for each optimization step. If `learning_rate` is set `perturbation` must also be provided.
  *   **perturbation** (*float | Callable\[\[], Iterator] | None*) – Specifies the magnitude of the perturbation for the finite difference approximation of the gradients. Can be either a float or a generator yielding the perturbation magnitudes per step. If `perturbation` is set `learning_rate` must also be provided.
  *   **resamplings** (*int | dict\[int, int]*) – The number of times the gradient (and Hessian) is sampled using a random direction to construct a gradient estimate. Per default the gradient is estimated using only one random direction. If an integer, all iterations use the same number of resamplings. If a dictionary, this is interpreted as `{iteration: number of resamplings per iteration}`.
  *   **perturbation\_dims** (*int | None*) – The number of perturbed dimensions. Per default, all dimensions are perturbed, but a smaller, fixed number can be perturbed. If set, the perturbed dimensions are chosen uniformly at random.
  *   **regularization** (*float | None*) – To ensure the preconditioner is symmetric and positive definite, the identity times a small coefficient is added to it. This generator yields that coefficient.
  *   **hessian\_delay** (*int*) – Start multiplying the gradient with the inverse Hessian only after a certain number of iterations. The Hessian is still evaluated and therefore this argument can be useful to first get a stable average over the last iterations before using it as preconditioner.
  *   **lse\_solver** (*Callable\[\[np.ndarray, np.ndarray], np.ndarray] | None*) – The method to solve for the inverse of the Hessian. Per default an exact LSE solver is used, but can e.g. be overwritten by a minimization routine.
  *   **initial\_hessian** (*np.ndarray | None*) – The initial guess for the Hessian. By default the identity matrix is used.
  *   **callback** (*CALLBACK | None*) – A callback function passed information in each iteration step. The information is, in this order: the parameters, the function value, the number of function evaluations, the stepsize, whether the step was accepted.
  *   **termination\_checker** (*TERMINATIONCHECKER | None*) – A callback function executed at the end of each iteration step. The arguments are, in this order: the parameters, the function value, the number of function evaluations, the stepsize, whether the step was accepted. If the callback returns True, the optimization is terminated. To prevent additional evaluations of the objective method, if the objective has not yet been evaluated, the objective is estimated by taking the mean of the objective evaluations used in the estimate of the gradient.

  ## Methods

  <span id="qiskit-algorithms-optimizers-qnspsa-calibrate" />

  ### calibrate

  <Function id="qiskit.algorithms.optimizers.QNSPSA.calibrate" name="calibrate" signature="static QNSPSA.calibrate(loss, initial_point, c=0.2, stability_constant=0, target_magnitude=None, alpha=0.602, gamma=0.101, modelspace=False, max_evals_grouped=1)">
    Calibrate SPSA parameters with a powerseries as learning rate and perturbation coeffs.

    The powerseries are:

    $$
    a_k = \frac{a}{(A + k + 1)^\alpha}, c_k = \frac{c}{(k + 1)^\gamma}
    $$

    **Parameters**

    *   **loss** (*Callable\[\[np.ndarray], float]*) – The loss function.
    *   **initial\_point** (*np.ndarray*) – The initial guess of the iteration.
    *   **c** (*float*) – The initial perturbation magnitude.
    *   **stability\_constant** (*float*) – The value of A.
    *   **target\_magnitude** (*float | None*) – The target magnitude for the first update step, defaults to $2\pi / 10$.
    *   **alpha** (*float*) – The exponent of the learning rate powerseries.
    *   **gamma** (*float*) – The exponent of the perturbation powerseries.
    *   **modelspace** (*bool*) – Whether the target magnitude is the difference of parameter values or function values (= model space).
    *   **max\_evals\_grouped** (*int*) – The number of grouped evaluations supported by the loss function. Defaults to 1, i.e. no grouping.

    **Returns**

    **A tuple of powerseries generators, the first one for the**

    learning rate and the second one for the perturbation.

    **Return type**

    tuple(generator, generator)
  </Function>

  <span id="qiskit-algorithms-optimizers-qnspsa-estimate-stddev" />

  ### estimate\_stddev

  <Function id="qiskit.algorithms.optimizers.QNSPSA.estimate_stddev" name="estimate_stddev" signature="static QNSPSA.estimate_stddev(loss, initial_point, avg=25, max_evals_grouped=1)">
    Estimate the standard deviation of the loss function.

    **Return type**

    float
  </Function>

  <span id="qiskit-algorithms-optimizers-qnspsa-get-fidelity" />

  ### get\_fidelity

  <Function id="qiskit.algorithms.optimizers.QNSPSA.get_fidelity" name="get_fidelity" signature="static QNSPSA.get_fidelity(circuit, backend=None, expectation=None, *, sampler=None)">
    Get a function to compute the fidelity of `circuit` with itself.

    <Admonition title="Note" type="note">
      Using this function with a backend and expectation converter is pending deprecation, instead pass a Qiskit Primitive sampler, such as [`Sampler`](qiskit.primitives.Sampler "qiskit.primitives.Sampler"). The sampler can be passed as keyword argument or, positionally, as second argument.
    </Admonition>

    Let `circuit` be a parameterized quantum circuit performing the operation $U(\theta)$ given a set of parameters $\theta$. Then this method returns a function to evaluate

    $$
    F(\theta, \phi) = \big|\langle 0 | U^\dagger(\theta) U(\phi) |0\rangle  \big|^2.
    $$

    The output of this function can be used as input for the `fidelity` to the [`QNSPSA`](qiskit.algorithms.optimizers.QNSPSA "qiskit.algorithms.optimizers.QNSPSA") optimizer.

    <Admonition title="Deprecated since version 0.24.0" type="danger">
      `qiskit.algorithms.optimizers.qnspsa.QNSPSA.get_fidelity()`’s argument `expectation` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. See [https://qisk.it/algo\_migration](https://qisk.it/algo_migration) for a migration guide.
    </Admonition>

    <Admonition title="Deprecated since version 0.24.0" type="danger">
      `qiskit.algorithms.optimizers.qnspsa.QNSPSA.get_fidelity()`’s argument `backend` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. See [https://qisk.it/algo\_migration](https://qisk.it/algo_migration) for a migration guide.
    </Admonition>

    **Parameters**

    *   **circuit** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – The circuit preparing the parameterized ansatz.
    *   **backend** ([*Backend*](qiskit.providers.Backend "qiskit.providers.Backend")  *|*[*QuantumInstance*](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance") *| None*) – Deprecated. A backend of quantum instance to evaluate the circuits. If None, plain matrix multiplication will be used.
    *   **expectation** ([*ExpectationBase*](qiskit.opflow.expectations.ExpectationBase "qiskit.opflow.expectations.ExpectationBase") *| None*) – Deprecated. An expectation converter to specify how the expected value is computed. If a shot-based readout is used this should be set to `PauliExpectation`.
    *   **sampler** ([*BaseSampler*](qiskit.primitives.BaseSampler "qiskit.primitives.BaseSampler") *| None*) – A sampler primitive to sample from a quantum state.

    **Returns**

    A handle to the function $F$.

    **Return type**

    Callable\[\[np.ndarray, np.ndarray], float]
  </Function>

  <span id="qiskit-algorithms-optimizers-qnspsa-get-support-level" />

  ### get\_support\_level

  <Function id="qiskit.algorithms.optimizers.QNSPSA.get_support_level" name="get_support_level" signature="QNSPSA.get_support_level()">
    Get the support level dictionary.
  </Function>

  <span id="qiskit-algorithms-optimizers-qnspsa-gradient-num-diff" />

  ### gradient\_num\_diff

  <Function id="qiskit.algorithms.optimizers.QNSPSA.gradient_num_diff" name="gradient_num_diff" signature="static QNSPSA.gradient_num_diff(x_center, f, epsilon, max_evals_grouped=None)">
    We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

    **Parameters**

    *   **x\_center** (*ndarray*) – point around which we compute the gradient
    *   **f** (*func*) – the function of which the gradient is to be computed.
    *   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
    *   **max\_evals\_grouped** (*int*) – max evals grouped, defaults to 1 (i.e. no batching).

    **Returns**

    the gradient computed

    **Return type**

    grad
  </Function>

  <span id="qiskit-algorithms-optimizers-qnspsa-minimize" />

  ### minimize

  <Function id="qiskit.algorithms.optimizers.QNSPSA.minimize" name="minimize" signature="QNSPSA.minimize(fun, x0, jac=None, bounds=None)">
    Minimize the scalar function.

    **Parameters**

    *   **fun** (*Callable\[\[POINT], float]*) – The scalar function to minimize.
    *   **x0** (*POINT*) – The initial point for the minimization.
    *   **jac** (*Callable\[\[POINT], POINT] | None*) – The gradient of the scalar function `fun`.
    *   **bounds** (*list\[tuple\[float, float]] | None*) – Bounds for the variables of `fun`. This argument might be ignored if the optimizer does not support bounds.

    **Returns**

    The result of the optimization, containing e.g. the result as attribute `x`.

    **Return type**

    [OptimizerResult](qiskit.algorithms.optimizers.OptimizerResult "qiskit.algorithms.optimizers.OptimizerResult")
  </Function>

  <span id="qiskit-algorithms-optimizers-qnspsa-optimize" />

  ### optimize

  <Function id="qiskit.algorithms.optimizers.QNSPSA.optimize" name="optimize" signature="QNSPSA.optimize(num_vars, objective_function, gradient_function=None, variable_bounds=None, initial_point=None)">
    Perform optimization.

    <Admonition title="Deprecated since version 0.21.0" type="danger">
      The method `qiskit.algorithms.optimizers.spsa.SPSA.optimize()` is deprecated as of qiskit-terra 0.21.0. It will be removed no earlier than 3 months after the release date. Instead, use `SPSA.minimize` as a replacement, which supports the same arguments but follows the interface of scipy.optimize and returns a complete result object containing additional information.
    </Admonition>

    **Parameters**

    *   **num\_vars** (*int*) – Number of parameters to be optimized.
    *   **objective\_function** (*callable*) – A function that computes the objective function.
    *   **gradient\_function** (*callable*) – Not supported for SPSA.
    *   **variable\_bounds** (*list\[(float, float)]*) – Not supported for SPSA.
    *   **initial\_point** ([*numpy.ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")*\[float]*) – Initial point.

    **Returns**

    **point, value, nfev**

    point: is a 1D numpy.ndarray\[float] containing the solution value: is a float with the objective function value nfev: number of objective function calls made if available or None

    **Return type**

    tuple
  </Function>

  <span id="qiskit-algorithms-optimizers-qnspsa-print-options" />

  ### print\_options

  <Function id="qiskit.algorithms.optimizers.QNSPSA.print_options" name="print_options" signature="QNSPSA.print_options()">
    Print algorithm-specific options.
  </Function>

  <span id="qiskit-algorithms-optimizers-qnspsa-set-max-evals-grouped" />

  ### set\_max\_evals\_grouped

  <Function id="qiskit.algorithms.optimizers.QNSPSA.set_max_evals_grouped" name="set_max_evals_grouped" signature="QNSPSA.set_max_evals_grouped(limit)">
    Set max evals grouped
  </Function>

  <span id="qiskit-algorithms-optimizers-qnspsa-set-options" />

  ### set\_options

  <Function id="qiskit.algorithms.optimizers.QNSPSA.set_options" name="set_options" signature="QNSPSA.set_options(**kwargs)">
    Sets or updates values in the options dictionary.

    The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

    **Parameters**

    **kwargs** (*dict*) – options, given as name=value.
  </Function>

  <span id="qiskit-algorithms-optimizers-qnspsa-wrap-function" />

  ### wrap\_function

  <Function id="qiskit.algorithms.optimizers.QNSPSA.wrap_function" name="wrap_function" signature="static QNSPSA.wrap_function(function, args)">
    Wrap the function to implicitly inject the args at the call of the function.

    **Parameters**

    *   **function** (*func*) – the target function
    *   **args** (*tuple*) – the args to be injected

    **Returns**

    wrapper

    **Return type**

    function\_wrapper
  </Function>

  ## Attributes

  ### bounds\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.bounds_support_level" name="bounds_support_level">
    Returns bounds support level
  </Attribute>

  ### gradient\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.gradient_support_level" name="gradient_support_level">
    Returns gradient support level
  </Attribute>

  ### initial\_point\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.initial_point_support_level" name="initial_point_support_level">
    Returns initial point support level
  </Attribute>

  ### is\_bounds\_ignored

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.is_bounds_ignored" name="is_bounds_ignored">
    Returns is bounds ignored
  </Attribute>

  ### is\_bounds\_required

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.is_bounds_required" name="is_bounds_required">
    Returns is bounds required
  </Attribute>

  ### is\_bounds\_supported

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.is_bounds_supported" name="is_bounds_supported">
    Returns is bounds supported
  </Attribute>

  ### is\_gradient\_ignored

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.is_gradient_ignored" name="is_gradient_ignored">
    Returns is gradient ignored
  </Attribute>

  ### is\_gradient\_required

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.is_gradient_required" name="is_gradient_required">
    Returns is gradient required
  </Attribute>

  ### is\_gradient\_supported

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.is_gradient_supported" name="is_gradient_supported">
    Returns is gradient supported
  </Attribute>

  ### is\_initial\_point\_ignored

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.is_initial_point_ignored" name="is_initial_point_ignored">
    Returns is initial point ignored
  </Attribute>

  ### is\_initial\_point\_required

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.is_initial_point_required" name="is_initial_point_required">
    Returns is initial point required
  </Attribute>

  ### is\_initial\_point\_supported

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.is_initial_point_supported" name="is_initial_point_supported">
    Returns is initial point supported
  </Attribute>

  ### setting

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.setting" name="setting">
    Return setting
  </Attribute>

  ### settings

  <Attribute id="qiskit.algorithms.optimizers.QNSPSA.settings" name="settings">
    The optimizer settings in a dictionary format.
  </Attribute>
</Class>

